tests/should_fail/traits/17_impl_refinement.coma
module M_17_impl_refinement__qyi370234707595078754__my_function [#"17_impl_refinement.rs" 15 4 15 34] (* <() as Tr> *)
  let%span s17_impl_refinement = "17_impl_refinement.rs" 16 8 16 10
  let%span s17_impl_refinement'0 = "17_impl_refinement.rs" 13 15 13 19
  let%span s17_impl_refinement'1 = "17_impl_refinement.rs" 14 14 14 27
  
  use creusot.int.UInt64
  use mach.int.Int
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec my_function[#"17_impl_refinement.rs" 15 4 15 34] (self:()) (return'  (x:UInt64.t))= {[@expl:my_function requires] [%#s17_impl_refinement'0] true}
    (! bb0 [ bb0 = s0 [ s0 =  [ &_0 <- [%#s17_impl_refinement] (20: UInt64.t) ] s1 | s1 = return''0 {_0} ]  ] )
    [ & _0: UInt64.t = Any.any_l () ]
    
    [ return''0 (result:UInt64.t)-> {[@expl:my_function ensures] [%#s17_impl_refinement'1] UInt64.t'int result >= 15}
      (! return' {result}) ]

end
module M_17_impl_refinement__qyi783700436729103035__need_false [#"17_impl_refinement.rs" 30 4 30 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement = "17_impl_refinement.rs" 29 15 29 23
  let%span s17_impl_refinement'0 = "17_impl_refinement.rs" 30 26 30 28
  
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  constant y  : UInt64.t
  
  function need_false [#"17_impl_refinement.rs" 30 4 30 25] (y'0: UInt64.t) : ()
  
  goal vc_need_false: true
end
module M_17_impl_refinement__qyi370234707595078754__my_function__refines [#"17_impl_refinement.rs" 15 4 15 34] (* <() as Tr> *)
  let%span s17_impl_refinement = "17_impl_refinement.rs" 15 4 15 34
  
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  goal refines: [%#s17_impl_refinement] forall self: (). forall result: UInt64.t. UInt64.t'int result >= 15
   -> UInt64.t'int result >= 10
end
module M_17_impl_refinement__qyi783700436729103035__need_false__refines [#"17_impl_refinement.rs" 30 4 30 25] (* <() as ReqFalse> *)
  let%span s17_impl_refinement = "17_impl_refinement.rs" 30 4 30 25
  
  use creusot.int.UInt64
  use mach.int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  goal refines: [%#s17_impl_refinement] forall x: UInt64.t. UInt64.t'int x >= 10  -> UInt64.t'int x >= 15
end
